// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`admin should return source 1`] = `
Object {
  "cron": "0 * * * *",
  "enabled": false,
  "harvestMode": "allAtOnce",
  "id": "6d0d717e-aa9d-11e7-abc4-cec278b6b50a",
  "language": "en",
  "name": "Galicia",
  "script": "galicia",
  "url": "http://ya.ru",
}
`;

exports[`anonymous shall not pass 1`] = `
Object {
  "data": Object {
    "source": null,
  },
  "errors": Array [
    [GraphQLError: You must be logged in to do this],
  ],
}
`;

exports[`superadmin should return source 1`] = `
Object {
  "cron": "0 * * * *",
  "enabled": false,
  "harvestMode": "allAtOnce",
  "id": "6d0d717e-aa9d-11e7-abc4-cec278b6b50a",
  "language": "en",
  "name": "Galicia",
  "script": "galicia",
  "url": "http://ya.ru",
}
`;

exports[`user shall not pass 1`] = `
Object {
  "data": Object {
    "source": null,
  },
  "errors": Array [
    [GraphQLError: You are not allowed to do this],
  ],
}
`;
